addon/styles/addon.less
@ember-grid-color: #5B83AD;
@ember-grid-odd-row-color: #F1F0F0;

.ember-grid {
	
	border: 2px solid @ember-grid-color;
  overflow-y: hidden;
  overflow-x: auto;
  position: relative;

	.declarative {
		// always hide declarative components
		display:none;
	}
  .display {
    box-sizing: border-box;
    overflow: hidden;
  }

	.header, .body {
	  border-bottom: 1px solid @ember-grid-color;
	}

	.footer, .body {
		.cell {
		  overflow: hidden;
		}
	}

	.header, .footer, .body {

	  font-size: 0px;
    white-space: nowrap;

		.cell {
    	border-right: 1px solid @ember-grid-color;
    	padding-left: 2px;
    	padding-right: 2px;
    	padding-top: 1px;
    	padding-bottom: 2px;
    	font-size: 14px;
      box-sizing: border-box;
      margin: 0;
    	display: inline-block;

    	&:last-child {
    		border-right-color: @ember-grid-color;
    	}

    	.default {
    		&.left {
    			text-align: left;
    		}
    		&.center {
    			text-align: center;
    		}
    		&.right {
    			text-align: right;
    		}
    	}
		}

		.resize-handle {
	    position: absolute;
	    right: -3px;
	    top: 0px;
	    bottom: 0px;
	    width: 5px;
	    cursor: ew-resize;
		}
	}

  .header {

    &.dragging {
	    cursor: ew-resize;
	  }
  }

	.header, .footer {
		position: relative;

		.cell {
			position: relative;
		}

	}

	.body {

    .body-collection {
      background-color: rgba(240,240,240,.5);
		  overflow-y: auto;
		  overflow-x: hidden;
		  position: relative;
		  width: 100%;

			> div {
			  position: absolute;
			  overflow: hidden;

			  .cell {
          background-color: white;
			  	&.odd {
			  		background-color: @ember-grid-odd-row-color;
			  	}
			  }
			}
		}

	}
}

